Fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -180,6 +180,7 @@ a:hover {
   width: 100vw;
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
+  overflow: hidden;
 }
 
 .overlay {
@@ -288,7 +289,6 @@ a:hover {
   bottom: 30%;
   left: 0;
   z-index: 8;
-  overflow-x: clip;
 }
 
 /* Endscreen ------------------------------------------------------------------------ */
@@ -300,6 +300,7 @@ a:hover {
   width: 100vw;
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
+  overflow: hidden;
 }
 
 .evaluation {
